2005-01-20  Carlos Garcia Campos  <carlosgc@gnome.org>

	* disks-conf.in: fixed an important bug in the scsi bus scanning

2005-01-17  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: Doh!, fixed bootproto creation in debian

2005-01-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.4.1

2005-01-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* users-conf.in: unfuck groups stuff in profiles, more concretely
	make it safe the new info sucessfully

2005-01-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.4

2005-01-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* users-conf.in: added default groups to profiles

2005-01-11  Carlos Garnacho Parro  <carlosg@gnome.org>

	* shares-conf.in: made it to save general SMB config

2005-01-11  Carlos Garnacho Parro  <carlosg@gnome.org>

	* shares-conf.in: added SMB general config to the XML

2005-01-10  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: s/login/user/ in debian ppp config files, it seems
	to be the good one

2005-01-03  Carlos Garnacho Parro  <carlosg@gnome.org>

	* m4macros/system-tools-backends.m4, Makefile.am: added, for other
	modules which may depend on this, setting STB_SCRIPTS_DIR with the
	backends path
	* configure.in, Makefile.am: ditto

2005-01-02  Carlos Garnacho Parro  <carlosg@gnome.org>

	* file.pl.in (gst_file_run_backtick): modified, now it can return
	stderr too. (gst_file_locate_tool): return too setuid apps.
	(gst_file_copy_from_stock): added, it copies files from FILESDIR to
	an specified location

	* network.pl.in (gst_network_get_interface_type): cache all values
	for not calling some commands constantly.
	(gst_network_create_isdn_options): added, creates ISDN PPP options file.
	(gst_network_check_pppd_plugin): added, checks for plugins existence.
	(gst_network_interfaces_get): only show PPP/ISDN interfaces if pppd
	exists.
	(gst_network_check_iface): replaced everywhere with